lemp/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: website
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: tuna2134
        image: ghcr.io/tuna2134/tuna2134.jp
        ports:
        - containerPort: 3000
