lemp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
