lemp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
  name: website-ingress
spec:
  rules:
  - host: tuna2134.jp
    http:
    paths:
    - pathType: Prefix
      path: /
      backend:
        service:
          name: website-service
          port:
            number: 3000
  tls:
  - hosts: [tuna2134.jp]
    secretName: tuna2134-jp-tls
